--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,13 @@
             <artifactId>druid</artifactId>
             <version>1.2.17</version>
         </dependency>
+
+        <!-- Resource -->
+        <dependency>
+            <groupId>jakarta.annotation</groupId>
+            <artifactId>jakarta.annotation-api</artifactId>
+            <version>2.1.1</version>
+        </dependency>
     </dependencies>
 
 </project>
