--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>spring6-ioc-annotation</module>
         <module>spring6-review-reflection</module>
         <module>spring6-reflect</module>
+        <module>my-spring</module>
     </modules>
 
     <properties>
