--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>spring6-review-reflection</module>
         <module>spring6-reflect</module>
         <module>my-spring</module>
+        <module>spring6-aop</module>
     </modules>
 
     <properties>
@@ -70,6 +71,18 @@
             <groupId>jakarta.annotation</groupId>
             <artifactId>jakarta.annotation-api</artifactId>
             <version>2.1.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
+            <version>6.0.8</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
+            <version>6.0.8</version>
         </dependency>
     </dependencies>
 
