--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>spring6-reflect</module>
         <module>my-spring</module>
         <module>spring6-aop</module>
+        <module>spring6-junit</module>
     </modules>
 
     <properties>
