--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>my-spring</module>
         <module>spring6-aop</module>
         <module>spring6-junit</module>
+        <module>spring6-jdbc-tx</module>
     </modules>
 
     <properties>
