--- a/spring6-jdbc-tx/src/main/resources/jdbc.properties
+++ b/spring6-jdbc-tx/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.user=root
-jdbc.password=13911881801
-jdbc.url=jdbc:mysql://max:3306/max3.0
+jdbc.password=root
+jdbc.url=jdbc:mysql://xxx:3306/xxx
 jdbc.driver=com.mysql.cj.jdbc.Driver
